tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__completion__argument_word.snap
---
source: tests/integration/lsp/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\usepackage{amsfonts}\n%SRC \\mathbb{A}\n%CUR         ^\n%1.1         ^\"#)?"
---
[
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "A",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "A"
    }
  }
]
