tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__completion__begin_environment_without_snippet_support.snap
---
source: tests/integration/lsp/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\beg\n%CUR     ^\n%1.1  ^^^\"#)?"
---
[
  {
    "detail": "built-in",
    "kind": 1,
    "label": "begin",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "begin"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "begingroup",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "begingroup"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "AtBeginDocument",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "AtBeginDocument"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "AtBeginDvi",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "AtBeginDvi"
    }
  },
  {
    "detail": "⋀, built-in",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "bigwedge",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "bigwedge"
    }
  }
]
