tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__completion__citation.snap
---
source: tests/integration/lsp/text_document/completion.rs
assertion_line: 228
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\documentclass{article}\n%SRC \\bibliography{main}\n%SRC \\begin{document}\n%SRC \\cite{\n%CUR       ^\n%SRC \\end{document}\n\n%BIB main.bib\n%SRC @article{foo:2019,\n%SRC     author = {Foo Bar},\n%SRC     title = {Baz Qux},\n%SRC     year = {2019},\n%SRC }\n%SRC \n%SRC @article{bar:2005,}\"#)?"
---
[
  {
    "data": "[data]",
    "filterText": "bar:2005 @article bar:2005",
    "kind": 1,
    "label": "bar:2005",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "bar:2005"
    }
  },
  {
    "data": "[data]",
    "documentation": "[documentation]",
    "filterText": "foo:2019 @article foo:2019 author Foo Bar title Baz Qux year 2019",
    "kind": 1,
    "label": "foo:2019",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "foo:2019"
    }
  }
]
